[package]
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]
description = "Cross-platform virtual memory API"
documentation = "https://docs.rs/region"
edition = "2018"
homepage = "https://github.com/darfink/region-rs"
keywords = ["region", "page", "lock", "protect", "maps"]
license = "MIT"
name = "region"
readme = "README.md"
repository = "https://github.com/darfink/region-rs"
version = "3.0.0"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[target.'cfg(target_os = "theseus")'.dependencies]
core2 = { version = "0.4.0", default-features = false, features = ["alloc", "nightly"] }
theseus_memory = { path = "../../kernel/memory", package = "memory" }

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies]
mach = "0.3"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["basetsd", "minwindef", "sysinfoapi", "memoryapi", "winnt"] }

[target."cfg(unix)".dev-dependencies]
mmap = { package = "mmap-fixed", version = "0.1.5" }
